k8s/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: evn-billing
  labels:
    app.kubernetes.io/name: evn-billing
